--- a/static/index.html
+++ b/static/index.html
@@ -75,11 +75,13 @@
         };
     }
 
+    // Converts a decimal number to a hex octet if number <= 255
     function toOctet(number) {
         var str = number.toString(16);
         return str.length == 1 ? "0" + str : str;
     }
 
+    // Converts an RGB object (see hsvToRgb()) to a web hex colour
     function rgbToHex(rgb) {
         return "#" + toOctet(rgb.r) + toOctet(rgb.g) + toOctet(rgb.b);
     }
@@ -92,7 +94,7 @@
         var i = 1 / (steps - 1); // distribute the colors evenly on the hue range
         var r = []; // hold the generated colors
         for (var x = 0; x < steps; x++) {
-            r.push(rgbToHex(hsvToRgb(i * x, 1, 1))); // you can also alternate the saturation and value for even more contrast between the colors
+            r.push(rgbToHex(hsvToRgb(i * x, 1, 1)));
         }
         return r;
     }
@@ -112,7 +114,8 @@
         xhr.onreadystatechange = function () {
             if (xhr.readyState == 4) {
                 try {
-                    if (xhr.status == 200) {
+                    if (xhr.status == 200 && callback) {
+                        // Success! Let's call the callback back if there is one
                         callback(JSON.parse(xhr.responseText));
                     }
                 }
@@ -124,6 +127,8 @@
 
         xhr.open(objects ? 'POST' : 'GET', url);
 
+        // Written by Mozilla Contributors on https://developer.mozilla.org/en-US/docs/Web/API/XMLHttpRequest/setRequestHeader
+        // Licensed under CC-BY-SA 2.5: https://creativecommons.org/licenses/by-sa/2.5/legalcode
         xhr.setRequestHeader("Accept", "application/json");
         xhr.setRequestHeader("Content-Type", "application/json");
 
@@ -133,6 +138,8 @@
 
     world = {};
 
+    // Get the hex web colour to set the next entity's colour to
+    // Also increments the count for next time
     function getNextColour() {
         var colour = gradientArray[gradientCount];
 
@@ -141,7 +148,7 @@
         return colour;
     }
 
-    //XXX: TODO Make this prettier!
+    // I made it prettier in addEntity()!
     function drawCircle(context, entity) {
         with (context) {
             beginPath();
@@ -151,7 +158,7 @@
             //moveTo(x,y);
             fillStyle = entity["colour"];
             strokeStyle = fillStyle;
-            arc(x, y, (entity["radius"]) ? entity["radius"] : 50, 0, 2.0 * Math.PI, false);
+            arc(x, y, (entity["radius"]) ? entity["radius"] : 10, 0, 2.0 * Math.PI, false);
             stroke();
         }
     }
@@ -161,7 +168,7 @@
             entity["colour"] = "#FF0000";
         }
         if (!entity["radius"]) {
-            entity["radius"] = 50;
+            entity["radius"] = 10;
         }
         return entity;
     }
@@ -200,7 +207,7 @@
         }
     }
 
-    // This is unpleasent, canvas clicks are not handled well
+    // This is unpleasant, canvas clicks are not handled well
     // So use this code, it works well on multitouch devices as well.
 
     function getPosition(e) {
@@ -222,14 +229,13 @@
 
     function addEntity(entity, data) {
         data.colour = getNextColour();
-        //XXX: Send a XHTML Request that updates the entity you just  modified!
-        sendJSONXMLHTTPRequest("/entity/" + entity, data, function (returnValue) {
-        })
+        // POSTs the entity up to the server, we'll fetch it again on next update
+        sendJSONXMLHTTPRequest("/entity/" + entity, data);
     }
 
     var counter = 0;
     function addEntityWithoutName(data) {
-        //var name = "X"+Math.floor((Math.random()*100)+1);
+        // I increased the count so you can see more of the rainbow
         var name = "X" + (counter++) % 200;
         addEntity(name, data);
     }
@@ -331,25 +337,22 @@
     })();
 
     // Add the application specific mouse listeners!
-    //XXX: TODO Make these prettier!
     mouse.mousedowners.push(function (x, y, clicked, e) {
-        addEntityWithoutName({'x': x, 'y': y, 'colour': 'blue'});
+        addEntityWithoutName({'x': x, 'y': y});
     });
 
     mouse.mouseuppers.push(function (x, y, clicked, e) {
-        addEntityWithoutName({'x': x, 'y': y, 'colour': 'red'});
+        addEntityWithoutName({'x': x, 'y': y});
     });
 
     mouse.mousedraggers.push(function (x, y, clicked, e) {
-        addEntityWithoutName({
-            'x': x, 'y': y, 'colour': 'green',
-            'radius': 10
-        });
+        addEntityWithoutName({'x': x, 'y': y});
     });
 
 
     function update() {
-        //XXX: TODO Get the world from the webservice using a XMLHTTPRequest
+        // Go get the latest copy of the world and replace our own
+        // null passed as 2nd argument makes it a GET
         sendJSONXMLHTTPRequest("/world", null, function (newWorld) {
             world = newWorld;
             drawNextFrame();
